apps/robot-shop/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: robot-shop
  labels:
    name: robot-shop
